--- a/lecciones/04_r_intro/index.Rmd
+++ b/lecciones/04_r_intro/index.Rmd
@@ -31,11 +31,21 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ---
 
-## Tipos de datos
+## Objetos
 
-R maneja cinco clases básicas de objetos:
+* Todo en R es un objeto
 
-- carácteres (letras) o **character** en inglés
+* El objeto más básico en R es el **vector**, que es un contenedor de objectos que puede alojar objetos del mismo tipo
+
+* La única **excepción** son las **listas** (o list en inglés), que son vectores que pueden contener diferentes tipos de objetos
+
+---
+
+## Tipos de objetos
+
+R maneja cinco tipos básicos (o atómicos) de objetos:
+
+- caracteres (letras) o **character** en inglés
 
 - numérico (números reales de doble precisión) o **numeric** en inglés
 
@@ -45,44 +55,160 @@ R maneja cinco clases básicas de objetos:
 
 - lógico (True/False) o **logic** en inglés
 
-El objeto más básico en R es el **vector**
+---
 
-- El vector es un contenedor de objectos que puede alojar objetos del mismo tipo
+## Creando vectores
 
-- **Excepción**: La única excepción son las **listas** (o list en inglés), que son vectores que pueden contener diferentes tipos de objetos
+La función `c()` puede ser usada para crear vectores de objetos
+
+```{r, echo = TRUE}
+  nu = c(0.5, 0.6)             ## vector de 2 objetos del tipo númerico
+  l1 = c(TRUE, FALSE, TRUE)    ## vector 3 objetos del tipo lógico
+  l2 = c(T, F)                 ## vector de 3 objetos del tipo lógico
+  ch = c('a')                  ## vector de 1 objeto del tipo caracter
+  it = 9:29                    ## vector de 21 objetos del tipo entero
+  co = c(1+0i, 2+4i)           ## vector de 2 objetos del tipo complejo
+```
+
+El caracter `#` indica que lo que está a la derecha es un comentario y por tanto es ignorado
+
+El operador `:` es usado para crear secuencia de enteros
 
 ---
 
-## Tipos de datos
+## Creando vectores
 
-```{r, echo = TRUE}
-  c <- 'hola' # vector del tipo character
-  class(c)
-```
-
-El caracter # indica que lo que está a la derecha es un comentario y por tanto es ignorado
+También se pueden crear vectores usando la función `vector()`
 
 ```{r, echo=TRUE}
-  n = 10 # vector del tipo númerico
-  class(n)
+  v = vector('numeric', length = 10) 
+  v[1] = 5
+  v  # auto-impresion
+  print(v) # impresion explícita
 ```
 
-El `[1]` indica que el objeto es un vector y que 10 es su primer elemento
-
-[Prefer = for assignment in R](http://www.win-vector.com/blog/2013/04/prefer-for-assignment-in-r/)
+El `[1]` indica que el objeto es un vector y que `5` es su primer elemento
 
 ---
 
-## Tipos de datos
+## Mezclando objetos
+
+Que pasaría si mezclamos objetos de diferentes tipos en un mismo vector
+
+```{r, echo=T}
+  y = c(1.7, 'a')   ## character
+  y
+```
+```{r, echo=T}
+  y = c(TRUE, 2)    ## numeric
+  y
+```
+
+---
+
+## Mezclando objetos
+
+```{r, echo=T}
+  y = c('a', TRUE)  ## character
+  y
+```
+
+Cuando mezclamos objetos de clases distintas, R intenta convertir los objetos a una misma clase siguiendo el siguiente esquema de precedencia y ocurriendo lo que se denomina *coeción implícita*:
+
+1. logical (menor precedencia)
+2. integer
+3. numeric
+4. complex
+5. character (mayor precedencia)
+
+---
+
+## Coeción Explícita
+
+Los objetos pueden ser explícitamente convertidos de una clase a otra utilizando (de ser posible) las funciones `as.*`
+
+```{r, echo=T}
+x = 0:6
+class(x)  # la función `class` se utiliza para averiguar la clase de un objeto
+```
+```{r, echo=T}
+x = as.numeric(x)
+x
+```
+
+---
+
+## Coerción Explícita
+
+```{r, echo=T}
+x = as.logical(x)
+x
+```
+```{r, echo=T}
+x = as.character(x)
+x
+```
+
+---
+
+## Coerción Explícita
+
+No todos los objetos de una clase se pueden convertir a otra, por ejemplo
+
+```{r, echo=T}
+x = c("a", "b", "c")
+as.numeric(x)
+```
+
+```NA``` (**"not available"**) es utilizado por R para indicar que un valor no está disponible
+
+```{r, echo=T}
+as.logical(x)
+```
+
+---
+
+### Matrices
+
+Las matrices son un tipo especial de vectores y están Matrices are vectors with a _dimension_ attribute. The dimension attribute is itself an integer vector of length 2 (nrow, ncol)
+
+```r
+> m <- matrix(nrow = 2, ncol = 3) 
+> m
+     [,1] [,2] [,3]
+[1,]   NA   NA   NA
+[2,]   NA   NA   NA
+> dim(m)
+[1] 2 3
+> attributes(m)
+$dim
+[1] 2 3
+```
+
+---
+
+## Atributos
+
+En R los objetos tienen los siguientes atributos
+
+-   names, dimnames
+
+-   dimensions (e.g. arrays, matrices)
+
+-   class
+
+-   length
+
+-   otros definidos por el usuario
+
+Mediante la función ```attributes()``` se puede acceder a los atributos de un objeto
+
+---
+
+## Atributos
 
 ```{r, echo = TRUE}
-  e = 20L # vector del tipo entero (agregar L al final)
-  class(e)
-  
-  l = TRUE # vector del tipo lógico
-  class(l)
-  
-  v = vector()  # vector vacío
+
 ```
 
 ---
