--- a/lecciones/04_r_intro/index.Rmd
+++ b/lecciones/04_r_intro/index.Rmd
@@ -168,21 +168,99 @@ as.logical(x)
 
 ---
 
-### Matrices
+## Matrices
 
-Las matrices son un tipo especial de vectores y están Matrices are vectors with a _dimension_ attribute. The dimension attribute is itself an integer vector of length 2 (nrow, ncol)
+Las matrices son un tipo especial de vectores donde los elementos se encuentran organizados en filas y columnas.
 
-```r
-> m <- matrix(nrow = 2, ncol = 3) 
-> m
-     [,1] [,2] [,3]
-[1,]   NA   NA   NA
-[2,]   NA   NA   NA
-> dim(m)
-[1] 2 3
-> attributes(m)
-$dim
-[1] 2 3
+```{r, echo=T}
+m = matrix(1:6, nrow = 2, ncol = 3) # creando una matriz de 2 filas y 3 columnas
+m
+```
+
+En R las matrices son objetos que cuentan con el atributo **dimensión**.
+
+```{r, echo=T}
+dim(m)  # opteniendo la dimensión de la matriz
+```
+
+---
+
+## Matrices
+
+Las matrices son construidas por columna. El primer elemento se encuentra en la esquina superior izquierda y a partir de ahí los siguientes van creandose a lo largo de las columnas
+
+```{r, echo=T}
+m = matrix(1:6, nrow = 2, ncol = 3)
+m
+```
+
+Para acceder a los elementos de la matriz se debe indicar entre ```[]``` la fila y columna separado por ```,```
+
+```{r, echo=T}
+m[2, 1] # elemento de la segunda fila primera columna 
+```
+
+---
+
+## Atributos
+
+La función ```attributes``` sirve para conocer los atributos de un objeto en R.
+
+```{r, echo=T}
+attributes(m)
+```
+
+---
+
+## cbind-ing y rbind-ing
+
+Las matrices también pueden ser creadas acoplando vectores por columna o fila con las funciones `cbind()` and `rbind()`, respectivamente
+
+```{r, echo=T}
+x = 1:3  # creando vector con la sequencia de enteros 1, 2, 3
+y = 10:12  # creando vector con la sequencia de enteros 10, 11, 12
+z = cbind(x, y)  # acoplando los vectores por columna para crear una matriz
+z
+w = rbind(x, y) # acoplando los vectores por fila para crear una matriz
+```
+
+---
+
+## Listas
+
+Las listas son un tipo especial de vectores que pueden contener elementos de diferentes clases
+
+```{r, echo=T}
+x = list(1, "a", TRUE, 1 + 4i) 
+x
+```
+
+---
+
+## Factores
+
+Los factores son usados en R para representar **datos categóricos**
+
+```{r, echo=T}
+x = factor(c('yes', 'yes', 'no', 'yes', 'no')) 
+x
+```
+
+La función ```table``` muestra la frecuencia de cada categoría.
+
+```{r, echo=T}
+table(x)
+```
+
+---
+
+## Factores ordenados
+
+En R los **datos ordinales** se represetan a través de factores ordenados. El orden de los factores se establece utilizando el argumento `levels` de la función `factor()`
+
+```{r, echo=T}
+x = factor(c('yes', 'yes', 'no', 'yes', 'no'), levels=c('yes', 'no'))
+x
 ```
 
 ---
