--- a/lecciones/04_r_intro/index.Rmd
+++ b/lecciones/04_r_intro/index.Rmd
@@ -392,9 +392,19 @@ if (x==10) {  # !=
 
 ---
 
-## Iteraciones: for
+## Ciclos: for
 
-...
+Los ciclos `for` toman una variable *interator* y le asignan valores sucesivos de una secuencia o vector. Los ciclos ```for``` son los más utilizados para iterar sobre los elementos de un objeto
+
+```{r, echo=T}
+x = data.frame(c1 = 4:6, c2 = 18:20)
+for(i in seq_len(nrow(x))) {
+  print(x[i, 'c1'])  # por cada fila imprimo el valor de la primera columna (nombre)
+  print(x[i, 2])     # por cada fila imprimo el valor de la segunda columna (número)
+}
+```
+
+Este ciclo toma la variable `i` y en cada iteración le asigna un nro de fila (1, 2, 3) y luego termina.
 
 ---
 
@@ -403,7 +413,19 @@ if (x==10) {  # !=
 La función ```apply``` nos permite ejecutar operaciones repetitivas sobre matrices y data frames
 
 ```{r, echo=T}
-x = data.frame(c1 = 1:2, c2 = 10:11); x
+x = data.frame(c1 = 1:3, c2 = 10:12); x
+apply(x, 2, median)  # apply(<objeto>, <fila (1) o columna (2)>, <funcion>)
+```
+
+Otras funciones que se puede utilizar: max, min, mean, sum
+
+---
+
+## Iteraciones: apply
+
+```{r, echo=T}
+x = data.frame(c1 = 1:2, c2 = 10:11)
+x
 mult = function(x, c) {
   return (x+c)
 }
@@ -426,46 +448,94 @@ rowSums(x)
 
 ## Lectura de datos
 
-...
+```read.csv``` es las función más utilizadas para la lectura de datos en formato csv. Algunos de sus parámetros son:
+
+- `file`, nombre del archivo, incluyendo la ruta al mismo
+- `header`, parámetro lógico indicando si el archivo cuenta con un encabezado
+- `skip`, número de filas a ignorar desde el inicio del archivo
+- `colClasses`, un vector de caracteres indicando la clase de cada columna en el dataset
+- `nrows`, el número de filas del dataset a leer
+- `comment.char`, cadena de caracteres indicando el caracter usado para comentarios
+- `stringsAsFactors`, parámetro lógico indicando si las variables de tipo caracter deben ser codificadas como factores
+
+```{r, echo=T}
+data = read.csv(file = 'becal-cobertura.csv', header = T, stringsAsFactors = F)
+```
 
 ---
 
-## Visualización con ggplot2
+## Estructura de datos
 
-...
+La función ```str``` se utiliza para una exploración rápida de la estructura del dataset
+
+```{r, echo=T}
+str(data, vec.len=1)
+```
 
 ---
 
-## Gramática
+## Visualización
 
-...
+Funciones de visualización más comunes:
 
+1 variable:
+* Histogramas
+* Boxplots
+* Barra
+* Linea
+
+2 variables:
+* Scatterplots
+
+```{r, echo=F}
+library(datasets)
+autos = mtcars
+```
 ---
 
 ## Histograma
 
-...
+```{r, echo=T, fig.height=5, fig.align='center'}
+hist(autos$mpg, col='green', main='Distribución de las millas por galón', 
+     xlab='Millas por galón', ylab='Frecuencia')
+```
 
 ---
 
-## Scatter plots
+## Boxplots
 
-...
-
----
-
-## Bar charts
-
-...
+```{r, echo=T, fig.height=5, fig.align='center'}
+boxplot(autos$hp, col='red', main='Distribución de caballos de fuerza', 
+        ylab='Caballos de fuerza')
+```
 
 ---
 
-## Línea
+## Barra
 
-...
+```{r, echo=F}
+autos$am = ifelse(autos$am==0,'automatico','manual')
+```
+
+```{r, echo=T, fig.height=5, fig.align='center'}
+barplot(table(autos$am), col='green', xlab='Tipo de transmisión',
+        main='Nro. de vehículos por tipo de transmisión')
+```
 
 ---
 
-## Box plots
+## Linea
 
-...
+```{r, echo=T, fig.height=5, fig.align='center'}
+plot(presidents, ylab = 'Porcentage de aprobación (%)', xlab='Año',
+     main = 'Aprobación (1er cuatrimestre) Presidentes de EEUU')
+```
+
+---
+
+## Scatterplots
+
+```{r, echo=T, fig.height=5, fig.align='center'}
+plot(autos$mpg, autos$wt, col='blue', xlab='Millas por galón', ylab='Peso (libras)',
+     main='Relación entre peso del vehículo y millas recorridas por galón')
+```
