Update slides of the lesson 4's presentation

--- a/lecciones/04_r_intro/index.Rmd
+++ b/lecciones/04_r_intro/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title       : Programación en R
+title       : Introducción a la programación en R
 subtitle    : Curso de Data Science con Impacto Social
 author      : Jorge Saldivar
 job         : Universidad Católica "Nuestra Señora de la Asunción"
@@ -427,7 +427,7 @@ Otras funciones que se puede utilizar: max, min, mean, sum
 x = data.frame(c1 = 1:2, c2 = 10:11)
 x
 mult = function(x, c) {
-  return (x+c)
+  return (x*c)
 }
 apply(x, 2, mult, 5)  # apply(<objeto>, <fila (1) o columna (2)>, <funcion>, <parametro>)
 ```
