--- a/lecciones/05_preprocesamiento/index.Rmd
+++ b/lecciones/05_preprocesamiento/index.Rmd
@@ -92,10 +92,16 @@ Normalmente se realizan algunas de las siguientes acciones para corregir errores
 
 ## Herramientas de preparación de datos en R
 
-- sub
+- partición y ordenamiento
 
-- str_trim
+- manejo de texto
 
+  - gsub
+  - grep/grepl
+  - str_trim
+  - strsplit
+  - tolower
+  
 - merge
 
 - dplyr
@@ -103,3 +109,40 @@ Normalmente se realizan algunas de las siguientes acciones para corregir errores
   - filter
   - select
   - mutate
+
+---
+
+## Partición
+
+```{r subsetting, echo=T}
+x = data.frame('var1'=sample(1:5),'var2'=sample(6:10),'var3'=sample(11:15))
+x
+```
+Todos los registros de la columna indicada por su respectivo indice
+```{r, dependson='subsetting', echo=T}
+x[,1]
+```
+
+---
+
+## Partición
+
+Todos los registros de la columna indicada por su nombre
+```{r, dependson='subsetting', echo=T}
+x[,'var1']
+```
+Los registros indicados por sus respectivos indices
+```{r, dependson='subsetting', echo=T}
+x[1:2,'var2']
+```
+
+---
+
+## Partición con expresiones lógicas
+
+```{r, dependson='subsetting'}
+x[(x$var1 <= 3 & x$var3 > 11),]   # AND
+x[(x$var1 <= 3 | x$var3 > 15),]   # OR
+```
+
+...
