Add new slides to the lesson 5' presentation

--- a/lecciones/05_preprocesamiento/index.Rmd
+++ b/lecciones/05_preprocesamiento/index.Rmd
@@ -95,11 +95,14 @@ Normalmente se realizan algunas de las siguientes acciones para corregir errores
 
 - manejo de texto
 
+  - tolower/toupper
+  - strsplit
   - gsub
   - grep/grepl
   - str_trim
-  - strsplit
-  - tolower
+  - nchar
+  - paste
+  - substr
   
 - merge
 
@@ -114,13 +117,13 @@ Normalmente se realizan algunas de las siguientes acciones para corregir errores
 ## Partición
 
 ```{r subsetting, echo=T}
-x = data.frame('var1'=sample(1:5),'var2'=sample(6:10),'var3'=sample(11:15))
+x = data.frame('var1'=sample(1:3),'var2'=sample(6:8),'var3'=sample(11:13))
 x
 ```
 Todos los registros de la columna indicada por su respectivo indice
 ```{r, dependson='subsetting', echo=T}
 x[,1]
-```
+``` 
 
 ---
 
@@ -144,4 +147,99 @@ x[(x$var1 <= 3 & x$var3 > 11),]   # AND
 x[(x$var1 <= 3 | x$var3 > 15),]   # OR
 ```
 
-...
+---
+
+## Ordenamiento
+
+```{r, dependson="subsetting", echo=F}
+x
+```
+
+```{r, dependson="subsetting"}
+sort(x$var1)  # ordenamiento ascendente por defecto
+sort(x$var1,decreasing=TRUE)
+```
+
+---
+
+## Texto a minúscula/mayúscula
+
+```{r becal, echo=F}
+becal = read.csv('../../proyecto/data/becal2017.csv', header = T, stringsAsFactors = F)
+```
+
+```{r, dependson="becal", echo=T}
+becal[1:5,'Sexo']
+```
+
+```{r, dependson="becal", echo=T}
+tolower(becal[,'Sexo'])[1:5]   # convertir todas las letras de la palabra a minúsculas
+toupper(becal[,'Sexo'])[1:5]   # convertir todas las letras de la palabra a mayúsculas
+```
+
+---
+
+## strplit: divir texto
+
+```{r, dependson="becal", echo=T}
+becal[1:2,'Fecha.firma.de.Contrato']
+strsplit(becal[1:2,'Fecha.firma.de.Contrato'], '/')  # divir el texto de fecha utilizando la barra como separador 
+```
+
+```{r, dependson="becal", echo=F}
+strsplit(becal[1:2,'Fecha.firma.de.Contrato'], '/')[[1]]   # acceder al primer elemento de la lista
+```
+
+---
+
+## gsub: remplazar caracter en texto
+
+```{r, dependson="becal", echo=T}
+becal[1:2,'C.I.']
+gsub(',', '', becal[,'C.I.'])[1:2]   # eliminar (o remplazar por vacio) las comas del texto cédula
+```
+
+---
+
+## grep/grepl: búscar caracteres en texto
+
+```{r becalc, echo=F}
+becal_c = read.csv('../../proyecto/data/becal-cobertura.csv', header = T, stringsAsFactors = F)
+```
+
+```{r, dependson="becalc", echo=T}
+becal_c[c(1,210,843),'Total.General']
+grep('€',becal_c[c(1,210,843),'Total.General'])  # buscar la presenciar de caracter euro
+```
+
+```{r, dependson="becalc", echo=T}
+grepl('€',becal_c[c(1,210,843),'Total.General'])  # buscar la presenciar de caracter euro
+```
+
+---
+
+## str_trim: eliminación de espacios vacíos redundantes
+
+```{r, dependson="becal", echo=T}
+becal[1:2,'Condición']
+str_trim(becal[1:2,'Condición'])  # eliminar espacios vacío al inicio y final del texto
+```
+
+---
+
+## Otras funciones de manejo de texto
+
+```{r, dependson="becalc", echo=T}
+becal_c[1,'Universidad.de.Destino']
+nchar(becal_c[1,'Universidad.de.Destino'])  # contar el número de caracteres del texto
+substr(becal_c[1,'Universidad.de.Destino'],16,20)  # extraer parte del texto
+```
+
+---
+
+## Otras funciones de manejo de texto
+
+```{r, dependson="becalc", echo=T}
+becal_c[1,c(5,6)]
+paste0(becal_c[1,5],' (',becal_c[1,6],')')
+```
