--- a/lecciones/05_preprocesamiento/index.Rmd
+++ b/lecciones/05_preprocesamiento/index.Rmd
@@ -282,7 +282,7 @@ paste0('Tamaño del dataset final: ', dim(ambos_becal)[1], ' filas x ', dim(ambo
 library(dplyr)
 ```
 
-Dyplyr es un paquete de funcionalidades de R que permite manipular frames de datos de forma conveniente. Sus principales funciones son:
+Dplyr es un paquete de funcionalidades de R que permite manipular frames de datos de forma conveniente. Sus principales funciones son:
 
 * `select`: obtener un subconjunto de las columnas seleccionadas del data frame
 
