--- a/lecciones/06_eda/index.Rmd
+++ b/lecciones/06_eda/index.Rmd
@@ -210,7 +210,7 @@ plot(becal$mesesdeduraciondeestudios, becal$totalgralusd,
 
 * La correlación mide que tanto dos variables se encuentran linealmente relacionadas. A diferencia de la covarianza que determina simplemente si dos variables cambian a la par, la correlación mide la fuerza de la relación entre ellas
 
-* El resultado de una análisis de correlación es un número entre -1 y 1. Los extremos indican correlación perfecta entre las variables. Una correlación negativa indica que las variables cambian en sentido contrario, mientras que una correlación positiva demuestra que ambas variables cambian en la misma dirección
+* El resultado de una análisis de correlación es un coeficiente entre -1 y 1. Los extremos indican correlación perfecta entre las variables. Una correlación negativa indica que las variables cambian en sentido contrario, mientras que una correlación positiva demuestra que ambas variables cambian en la misma dirección
 
 * En R correlación se calcula por medio de la función ``cor``
 
